[project]
name = "distortions"
version = "0.1.0"
description = ""
authors = [
    {name = "jefferson-norberto2",email = "jmn@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.15.4,<1.0.0)",
    "scikit-learn (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
